[np-48561] refactor: Extend base class in all REST handler tests (#443)
This refactors the REST handler tests to all extend the same base class, in a separate PR from the actual business logic changes.