@@ -2,8 +2,8 @@ package no.sikt.nva.nvi.rest.remove;
 
 import static no.sikt.nva.nvi.rest.fetch.FetchNviCandidateHandler.CANDIDATE_IDENTIFIER;
 import static no.sikt.nva.nvi.rest.remove.RemoveNoteHandler.PARAM_NOTE_IDENTIFIER;
+import static no.sikt.nva.nvi.test.TestUtils.CURRENT_YEAR;
 import static no.sikt.nva.nvi.test.TestUtils.periodRepositoryReturningClosedPeriod;
-import static no.sikt.nva.nvi.test.TestUtils.periodRepositoryReturningOpenedPeriod;
 import static no.sikt.nva.nvi.test.TestUtils.randomUsername;
 import static no.unit.nva.commons.json.JsonUtils.dtoObjectMapper;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
@@ -12,42 +12,28 @@ import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
-import static org.mockito.Mockito.mock;
 
-import com.amazonaws.services.lambda.runtime.Context;
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.util.Calendar;
 import java.util.Map;
 import java.util.UUID;
-import no.sikt.nva.nvi.common.db.CandidateRepository;
-import no.sikt.nva.nvi.common.db.PeriodRepository;
 import no.sikt.nva.nvi.common.db.model.Username;
 import no.sikt.nva.nvi.common.model.CreateNoteRequest;
 import no.sikt.nva.nvi.common.service.dto.CandidateDto;
 import no.sikt.nva.nvi.common.service.model.Candidate;
+import no.sikt.nva.nvi.rest.BaseCandidateRestHandlerTest;
 import no.sikt.nva.nvi.rest.create.NviNoteRequest;
 import no.sikt.nva.nvi.test.FakeViewingScopeValidator;
-import no.sikt.nva.nvi.test.LocalDynamoTest;
-import no.sikt.nva.nvi.test.TestUtils;
 import no.unit.nva.testutils.HandlerRequestBuilder;
 import nva.commons.apigateway.AccessRight;
+import nva.commons.apigateway.ApiGatewayHandler;
 import nva.commons.apigateway.GatewayResponse;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.zalando.problem.Problem;
 
-class RemoveNoteHandlerTest extends LocalDynamoTest {
-
-  public static final int YEAR = Calendar.getInstance().getWeeksInWeekYear();
-  private Context context;
-  private ByteArrayOutputStream output;
-  private RemoveNoteHandler handler;
-  private PeriodRepository periodRepository;
-  private CandidateRepository candidateRepository;
-
+class RemoveNoteHandlerTest extends BaseCandidateRestHandlerTest {
   private static HandlerRequestBuilder<NviNoteRequest> createRequestWithoutAccessRights(
       String candidateId, String noteId, String userName) {
     return new HandlerRequestBuilder<NviNoteRequest>(dtoObjectMapper)
@@ -56,16 +42,14 @@ class RemoveNoteHandlerTest extends LocalDynamoTest {
         .withUserName(userName);
   }
 
+  @Override
+  protected ApiGatewayHandler<Void, CandidateDto> createHandler() {
+    return new RemoveNoteHandler(candidateRepository, periodRepository, mockViewingScopeValidator);
+  }
+
   @BeforeEach
   void setUp() {
-    output = new ByteArrayOutputStream();
-    context = mock(Context.class);
-    localDynamo = initializeTestDatabase();
-    candidateRepository = new CandidateRepository(localDynamo);
-    periodRepository = periodRepositoryReturningOpenedPeriod(YEAR);
-    handler =
-        new RemoveNoteHandler(
-            candidateRepository, periodRepository, new FakeViewingScopeValidator(true));
+    resourcePathParameter = "candidateIdentifier";
   }
 
   @Test
@@ -73,7 +57,7 @@ class RemoveNoteHandlerTest extends LocalDynamoTest {
     handler.handleRequest(
         createRequestWithoutAccessRights(randomString(), randomString(), randomString()).build(),
         output,
-        context);
+        CONTEXT);
     var response = GatewayResponse.fromOutputStream(output, Problem.class);
 
     assertThat(response.getStatusCode(), is(equalTo(HttpURLConnection.HTTP_UNAUTHORIZED)));
@@ -81,40 +65,40 @@ class RemoveNoteHandlerTest extends LocalDynamoTest {
 
   @Test
   void shouldReturnUnauthorizedWhenCandidateIsNotInUsersViewingScope() throws IOException {
-    var candidate = createCandidate();
+    var candidate = setupValidCandidate(topLevelOrganizationId);
     var user = randomUsername();
     var candidateWithNote = createNote(candidate, user);
-    var noteId = candidateWithNote.toDto().notes().get(0).identifier();
+    var noteId = candidateWithNote.toDto().notes().getFirst().identifier();
     var request = createRequest(candidate.getIdentifier(), noteId, user.value()).build();
     var viewingScopeValidatorReturningFalse = new FakeViewingScopeValidator(false);
     handler =
         new RemoveNoteHandler(
             candidateRepository, periodRepository, viewingScopeValidatorReturningFalse);
-    handler.handleRequest(request, output, context);
+    handler.handleRequest(request, output, CONTEXT);
     var response = GatewayResponse.fromOutputStream(output, Problem.class);
     assertThat(response.getStatusCode(), is(equalTo(HttpURLConnection.HTTP_UNAUTHORIZED)));
   }
 
   @Test
   void shouldReturnUnauthorizedWhenNotTheUserThatCreatedTheNote() throws IOException {
-    var candidate = createCandidate();
+    var candidate = setupValidCandidate(topLevelOrganizationId);
     var user = randomUsername();
     var candidateWithNote = createNote(candidate, user);
-    var noteId = candidateWithNote.toDto().notes().get(0).identifier();
+    var noteId = candidateWithNote.toDto().notes().getFirst().identifier();
     var request = createRequest(candidate.getIdentifier(), noteId, randomString()).build();
-    handler.handleRequest(request, output, context);
+    handler.handleRequest(request, output, CONTEXT);
     var response = GatewayResponse.fromOutputStream(output, Problem.class);
     assertThat(response.getStatusCode(), is(equalTo(HttpURLConnection.HTTP_UNAUTHORIZED)));
   }
 
   @Test
   void shouldBeAbleToRemoveNoteWhenTheUserThatCreatedIt() throws IOException {
-    var candidate = createCandidate();
+    var candidate = setupValidCandidate(topLevelOrganizationId);
     var user = randomUsername();
     var candidateWithNote = createNote(candidate, user);
-    var noteId = candidateWithNote.toDto().notes().get(0).identifier();
+    var noteId = candidateWithNote.toDto().notes().getFirst().identifier();
     var request = createRequest(candidate.getIdentifier(), noteId, user.value()).build();
-    handler.handleRequest(request, output, context);
+    handler.handleRequest(request, output, CONTEXT);
     var gatewayResponse = GatewayResponse.fromOutputStream(output, CandidateDto.class);
     var body = gatewayResponse.getBodyObject(CandidateDto.class);
     assertThat(body.notes(), hasSize(0));
@@ -123,25 +107,25 @@ class RemoveNoteHandlerTest extends LocalDynamoTest {
   @Test
   void shouldReturnNotFoundWhenNoteDoesntExist() throws IOException {
     var request = createRequest(UUID.randomUUID(), UUID.randomUUID(), randomString()).build();
-    handler.handleRequest(request, output, context);
+    handler.handleRequest(request, output, CONTEXT);
     var response = GatewayResponse.fromOutputStream(output, Problem.class);
     assertThat(response.getStatusCode(), is(equalTo(HttpURLConnection.HTTP_NOT_FOUND)));
   }
 
   @Test
   void shouldReturnConflictWhenRemovingNoteAndReportingPeriodIsClosed() throws IOException {
-    var candidate = createCandidate();
+    var candidate = setupValidCandidate(topLevelOrganizationId);
     var user = randomString();
     candidate.createNote(
         new CreateNoteRequest(randomString(), user, randomUri()), candidateRepository);
-    var noteId = candidate.toDto().notes().get(0).identifier();
+    var noteId = candidate.toDto().notes().getFirst().identifier();
     var request = createRequest(candidate.getIdentifier(), noteId, user).build();
     handler =
         new RemoveNoteHandler(
             candidateRepository,
-            periodRepositoryReturningClosedPeriod(YEAR),
+            periodRepositoryReturningClosedPeriod(CURRENT_YEAR),
             new FakeViewingScopeValidator(true));
-    handler.handleRequest(request, output, context);
+    handler.handleRequest(request, output, CONTEXT);
     var response = GatewayResponse.fromOutputStream(output, Problem.class);
 
     assertThat(response.getStatusCode(), is(Matchers.equalTo(HttpURLConnection.HTTP_CONFLICT)));
@@ -150,10 +134,6 @@ class RemoveNoteHandlerTest extends LocalDynamoTest {
   private Candidate createNote(Candidate candidate, Username user) {
     return candidate.createNote(
         new CreateNoteRequest(randomString(), user.value(), randomUri()), candidateRepository);
-  }
-
-  private Candidate createCandidate() {
-    return TestUtils.randomApplicableCandidate(candidateRepository, periodRepository);
   }
 
   private HandlerRequestBuilder<NviNoteRequest> createRequest(
